--- a/a.css
+++ b/a.css
@@ -11,7 +11,6 @@ a {color:blue; text-decoration:none;}
   padding: 5px;
   text-align: left;}
 
-.counter{
-    position: fixed;
-    bottom: 0px;
-}
+.problem {text-align:center}
+
+.enclose {position:fixed;bottom:0px;width:100%;}
