--- a/a.css
+++ b/a.css
@@ -11,6 +11,7 @@ a {color:blue; text-decoration:none;}
   padding: 5px;
   text-align: left;}
 
-.problem {text-align:center}
-
-.enclose {position:fixed;bottom:0px;width:100%;}
+ #bottom { 
+                position:absolute;                  
+                bottom:0;                          
+                left:0;} 
