--- a/a.css
+++ b/a.css
@@ -2,6 +2,12 @@ html {font-family: Arial; font-size: 25px;}
 
 a {color:blue; text-decoration:none;}
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: 350px auto;
