--- a/a.css
+++ b/a.css
@@ -1,10 +1,10 @@
-html {font-size: 25px;}
+html {font-family: Arial; font-size: 25px;}
 
 a {color:blue; text-decoration:none;}
 
 @media only screen and (max-width: 800px) {
   html {
-    font-family: Arial;
+    font-size: 40px;
   }
 }
 
