--- a/a.css
+++ b/a.css
@@ -3,9 +3,11 @@ html {font-family: Arial; font-size: 25px;}
 a {color:blue; text-decoration:none;}
 
 @media only screen and (max-width: 800px) {
-  html {
-    font-size: 40px;
-  }
+  .grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 5px;}
+  html {font-size: 35px;}
 }
 
 .grid-container {
